--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
 		<script src="https://dreamplan7.cafe24.com/canvas2/js/ColladaLoader.js"></script>		
 		<script src="https://dreamplan7.cafe24.com/canvas2/js/Sky.js"></script>		
 		<script src="https://dreamplan7.cafe24.com/canvas2/js/Water.js"></script>		
-        <script type = "module" src="./main.js"></script>
+        <script src="./main.js"></script>
 	</body>
 </html>
