--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 			</div>
 		</div>
 
-		<script src="https://dreamplan7.cafe24.com/canvas2/js/three.js"></script>
-		<script src="https://dreamplan7.cafe24.com/canvas2/js/OrbitControls.js"></script>
-		<script src="https://dreamplan7.cafe24.com/canvas2/js/ColladaLoader.js"></script>		
-		<script src="https://dreamplan7.cafe24.com/canvas2/js/Sky.js"></script>		
-		<script src="https://dreamplan7.cafe24.com/canvas2/js/Water.js"></script>		
+		<script src="http://dreamplan7.cafe24.com/canvas2/js/three.js"></script>
+		<script src="http://dreamplan7.cafe24.com/canvas2/js/OrbitControls.js"></script>
+		<script src="http://dreamplan7.cafe24.com/canvas2/js/ColladaLoader.js"></script>		
+		<script src="http://dreamplan7.cafe24.com/canvas2/js/Sky.js"></script>		
+		<script src="http://dreamplan7.cafe24.com/canvas2/js/Water.js"></script>		
         <script src="./main.js"></script>
 	</body>
 </html>
