--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+        
 		<title>3차원 캔바스 예제 1</title>
 		<style>
 			@font-face {
