--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+
 		<title>intro</title>
 		<style>
 			@font-face {
