--- a/index.html
+++ b/index.html
@@ -1,60 +1,58 @@
 <html>
 	<head>
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
-
 		<title>intro</title>
 		<style>
 			@font-face {
-    font-family: 'MICEGothic Bold';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-01@1.0/MICEGothic Bold.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
-    }
-    body {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-    }
-    .text{
-        display: flex;
-        font-size: 2.4em;
-        justify-content: center;
-        width: 80%;
-        position: absolute;
-        top: 75%;
-        left: 50%;
-        transform: translate(-50%,-40%);
-        border-radius: 60px;
-        height: 5vh;
-        line-height: 5vh;
-        color:white;
-        font-family: 'MICEGothic Bold';
-    }
-    #canvasWrap {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-    }
-    .header{
-        display: flex;
-        font-size: 2.0em;
-        justify-content: center;
-        width: 100%;
-		color:white;
-        font-family: 'MICEGothic Bold';
-        margin-top: 150px;
-    }
-    .header_2{
-        display: flex;
-        font-size: 3.0em;
-        justify-content: center;
-        width: 100%;
-		color:white;
-        font-family: 'MICEGothic Bold';
-    }
+                font-family: 'MICEGothic Bold';
+                src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-01@1.0/MICEGothic Bold.woff2') format('woff2');
+                font-weight: 700;
+                font-style: normal;
+            }
+            body {
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+            }
+            .text{
+                display: flex;
+                font-size: 2.4em;
+                justify-content: center;
+                width: 80%;
+                position: absolute;
+                top: 75%;
+                left: 50%;
+                transform: translate(-50%,-40%);
+                border-radius: 60px;
+                height: 5vh;
+                line-height: 5vh;
+                color:white;
+                font-family: 'MICEGothic Bold';
+            }
+            #canvasWrap {
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+            }
+            .header{
+                display: flex;
+                font-size: 2.0em;
+                justify-content: center;
+                width: 100%;
+                color:white;
+                font-family: 'MICEGothic Bold';
+                margin-top: 150px;
+            }
+            .header_2{
+                display: flex;
+                font-size: 3.0em;
+                justify-content: center;
+                width: 100%;
+                color:white;
+                font-family: 'MICEGothic Bold';
+            }
 		</style>
-        <link href="style.css">
+        <!-- <link href="style.css"> -->
 	</head>
 	<body>
 		<div id ="canvasWrap">
@@ -68,12 +66,8 @@
 				YEOSU EXPO
 			</div>
 		</div>
-
-		<script src="http://dreamplan7.cafe24.com/canvas2/js/three.js"></script>
-		<script src="http://dreamplan7.cafe24.com/canvas2/js/OrbitControls.js"></script>
-		<script src="http://dreamplan7.cafe24.com/canvas2/js/ColladaLoader.js"></script>		
-		<script src="http://dreamplan7.cafe24.com/canvas2/js/Sky.js"></script>		
-		<script src="http://dreamplan7.cafe24.com/canvas2/js/Water.js"></script>		
-        <script src="./main.js"></script>
+        <script src="./three.js"></script>	
+        <script src="./Water.js"></script>
+        <script src="./Sky.js"></script>
 	</body>
 </html>
